tests/tests/neg/error_messages/wf/assoc_reft01.rs
#[flux::assoc(fn f(x: int) -> int { x > 1 })]   //~ ERROR mismatched sorts
pub trait MyTrait {}

